<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center_vertical"
    android:gravity="center"
    android:orientation="vertical" >

    <FrameLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dp"
            android:layout_marginEnd="5dp"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingBottom="-50dp" >

            <LinearLayout
                android:background="@color/colorPrimary"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="20dp">

                <ImageView
                    android:layout_gravity="center_horizontal"
                    android:layout_marginBottom="@dimen/frag_home_view_marginBottom"
                    android:id="@+id/logo"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:src="@drawable/codekrypt_labs" />

                <!-- Build with love at codekrypt labs -->
                <LinearLayout
                    android:layout_marginBottom="10dp"
                    android:layout_gravity="center_horizontal"
                    android:orientation="horizontal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
                    <TextView
                        android:text="@string/build_with"
                        android:textColor="@color/white"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="18sp"
                        />
                    <ImageView
                        android:layout_marginLeft="5dp"
                        android:layout_marginStart="5dp"
                        android:src="@drawable/love"
                        android:layout_width="18dp"
                        android:layout_height="18dp" />

                    <TextView
                        android:layout_marginLeft="5dp"
                        android:layout_marginStart="5dp"
                        android:text="@string/codekrypt_lab_dialog"
                        android:textColor="@color/white"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="18sp"
                        />
                    <ImageView
                        android:layout_marginLeft="5dp"
                        android:layout_marginStart="5dp"
                        android:src="@drawable/labs"
                        android:layout_width="18dp"
                        android:layout_height="18dp" />

                </LinearLayout>

                <View
                    android:layout_marginBottom="10dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_width="180dp"
                    android:layout_height="1dp"
                    android:background="@android:color/white"/>



                <LinearLayout
                    android:layout_gravity="center_horizontal"
                    android:gravity="center_horizontal"
                    android:padding="10dp"
                    android:orientation="vertical"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <TextView
                        android:textSize="18sp"
                        android:textColor="@color/white"
                        android:text="@string/arjun_sk"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        />
                    <TextView
                        android:textColor="@color/black"
                        android:text= "@string/developer"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        />

                </LinearLayout>

                <LinearLayout
                    android:layout_gravity="center_horizontal"
                    android:gravity="center_horizontal"
                    android:padding="10dp"
                    android:orientation="vertical"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <TextView
                        android:textSize="18sp"
                        android:textColor="@color/white"
                        android:text="@string/vishnuvardhan_prem"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        />
                    <TextView
                        android:textColor="@color/black"
                        android:text= "@string/design_amp_ui"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        />

                </LinearLayout>


                <LinearLayout
                    android:layout_gravity="center_horizontal"
                    android:gravity="center_horizontal"
                    android:padding="10dp"
                    android:orientation="vertical"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <TextView
                        android:textSize="18sp"
                        android:textColor="@color/white"
                        android:text="@string/prabuldas_s_r"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        />
                    <TextView
                        android:textColor="@color/black"
                        android:text= "@string/testing"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        />

                </LinearLayout>


            </LinearLayout>
        </LinearLayout>

        <ImageView
            android:id="@+id/dialog_about_close"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_gravity="top|end"
            android:clickable="true"
            android:src="@drawable/close" />
    </FrameLayout>

</LinearLayout>