<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:fbutton="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tib="http://schemas.android.com/apk/res-auto"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="com.arjunsk.numbo.Fragments.HomeFragment">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimary"
        android:gravity="center">

        <!-- Logo Text -->
        <TextView
            android:id="@+id/logo_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="40dp"
            android:layout_marginBottom="40dp"
            android:text="@string/app_name"
            android:textSize="35sp" />


        <!-- GameFragment Info -->
        <RelativeLayout
            android:id="@+id/ll_game_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/logo_text"
            android:layout_marginBottom="@dimen/frag_home_view_marginBottom"
            android:gravity="center">

            <TextView
                android:id="@+id/tv_high_score"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:layout_marginEnd="10dp"
                android:text="@string/highscore_0"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/tv_game_play"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/gameplay_0"
                android:textSize="20sp"
                android:layout_alignParentTop="true"
                android:layout_toRightOf="@+id/tv_high_score"
                android:layout_toEndOf="@+id/tv_high_score" />


        </RelativeLayout>


        <!-- Play -->
        <info.hoang8f.widget.FButton
            android:id="@+id/btn_play"
            android:layout_width="190dp"
            android:layout_height="40dp"

            android:layout_below="@+id/ll_game_info"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="@dimen/frag_home_view_marginBottom"

            android:drawableStart="@drawable/play_game"
            android:drawableLeft="@drawable/play_game"

            android:minWidth="250dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"

            android:text="@string/play"
            android:textColor="@android:color/white"

            android:textSize="20sp"
            fbutton:buttonColor="#FF173E"
            fbutton:cornerRadius="5dp"

            fbutton:shadowColor="#D70033"
            fbutton:shadowEnabled="true"

            fbutton:shadowHeight="4dp"

            />


        <!-- Add contacts -->
        <info.hoang8f.widget.FButton
            android:id="@+id/btn_settings"
            android:layout_width="190dp"
            android:layout_height="40dp"

            android:layout_below="@+id/btn_play"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="@dimen/frag_home_view_marginBottom"

            android:drawablePadding="0dp"
            android:drawableStart="@drawable/add_contacts"
            android:drawableLeft="@drawable/add_contacts"

            android:minWidth="250dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"

            android:text="@string/pick_contacts"
            android:textColor="@android:color/white"

            android:textSize="20sp"
            fbutton:buttonColor="#FF173E"
            fbutton:cornerRadius="5dp"

            fbutton:shadowColor="#D70033"
            fbutton:shadowEnabled="true"

            fbutton:shadowHeight="4dp" />




        <!-- Studio Logo + Studio Text + Toggle Buttons -->
        <RelativeLayout
            android:layout_marginBottom="20dp"
            android:id="@+id/logo_and_buttons_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:layout_alignParentBottom="true">


            <LinearLayout
                android:gravity="center_horizontal"
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                    <!-- Studio Logo -->
                    <ImageView
                        android:id="@+id/logo"
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:layout_marginBottom="@dimen/frag_home_view_marginBottom"
                        android:src="@drawable/codekrypt_labs" />

                    <!--Studio Logo Text -->
                    <TextView
                        android:id="@+id/studio_logo_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10dp"
                        android:text="@string/codekrypt_labs"
                        android:textSize="25sp" />


                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <net.colindodd.toggleimagebutton.ToggleImageButton
                            android:layout_alignParentLeft="true"
                            android:layout_alignParentStart="true"
                            android:id="@+id/toggle_sound"
                            android:layout_width="40dp"
                            android:layout_height="40dp"
                            android:scaleX="0.7"
                            android:scaleY="0.7"
                            tib:tib_drawable_off="@drawable/toggle_sound_off"
                            tib:tib_drawable_on="@drawable/toggle_sound_on" />


                        <net.colindodd.toggleimagebutton.ToggleImageButton
                            android:layout_alignParentRight="true"
                            android:layout_alignParentEnd="true"
                            android:id="@+id/toggle_vibration"
                            android:layout_width="40dp"
                            android:layout_height="40dp"
                            android:scaleX="0.7"
                            android:scaleY="0.7"
                            tib:tib_drawable_off="@drawable/toggle_vibrate_off"
                            tib:tib_drawable_on="@drawable/toggle_vibrate_on" />
                    </RelativeLayout>

            </LinearLayout>

        </RelativeLayout>


    </RelativeLayout>


</FrameLayout>
