<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:fancy="http://schemas.android.com/apk/res-auto"

    android:id="@+id/activity_main"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"

    xmlns:fbutton="http://schemas.android.com/apk/res-auto"
    tools:context="com.arjunsk.numbo.MainActivity">

    <RelativeLayout
        android:paddingLeft="50dp"
        android:paddingRight="50dp"
        android:paddingBottom="0dp"
        android:paddingTop="100dp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">




        <!-- Title Text -->
        <TextView
            android:textColor="@color/white"
            android:layout_centerHorizontal="true"
            android:textSize="30sp"
            android:id="@+id/dialog_title"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="Paused"
            android:layout_marginBottom="25dp" />


        <!-- Show Password View-->
        <RelativeLayout
            android:id="@+id/dia_learn"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:gravity="center_horizontal"
            android:layout_below="@+id/dialog_title">



            <mehdi.sakout.fancybuttons.FancyButton
                android:layout_marginLeft="10dp"
                android:layout_marginStart="10dp"

                android:layout_width="30dp"
                android:layout_height="30dp"

                fancy:fb_radius="30dp"
                android:id="@+id/btn_show_number"
                fancy:fb_fontIconSize="20sp"

                fancy:fb_defaultColor="@android:color/transparent"
                fancy:fb_focusColor="@color/colorPrimary"
                fancy:fb_textColor="#fff"

                fancy:fb_disabledColor="@android:color/transparent"
                fancy:fb_disabledTextColor="#fff"

                fancy:fb_fontIconResource="&#xf023;"
                fancy:fb_text="" />


            <com.jungly.gridpasswordview.GridPasswordView

                android:clickable="false"
                android:cursorVisible="false"
                android:focusable="false"
                android:focusableInTouchMode="false"

                android:layout_toRightOf="@+id/btn_show_number"
                android:layout_toEndOf="@+id/btn_show_number"

                app:gpvPasswordLength="15"

                app:gpvTextColor="#FFF"
                app:gpvTextSize="20sp"
                app:gpvLineColor="@android:color/transparent"
                app:gpvLineWidth="1dp"
                app:gpvGridColor="@android:color/transparent"

                app:gpvPasswordType="textPassword"

                android:id="@+id/show_phone_number"

                android:layout_width="match_parent"
                android:layout_height="30dp"
                />




        </RelativeLayout>


        <!-- Resume -->
        <info.hoang8f.widget.FButton
            android:layout_marginTop="30dp"
            android:textSize="20sp"
            android:layout_below="@+id/dia_learn"
            android:id="@+id/dialog_btn_1"

            android:layout_width="190dp"
            android:layout_height="40dp"
            android:layout_centerHorizontal="true"

            android:drawableLeft="@drawable/resume"
            android:drawableStart="@drawable/resume"
            android:drawablePadding="0dp"

            android:minWidth="250dp"
            android:paddingStart="15dp"
            android:paddingLeft="15dp"
            android:paddingEnd="10dp"
            android:paddingRight="10dp"
            android:paddingTop="-5dp"

            android:text="@string/resume"
            android:textColor="@android:color/white"

            fbutton:cornerRadius="5dp"
            fbutton:shadowEnabled="true"
            fbutton:shadowHeight="4dp"

            fbutton:buttonColor="#FF173E"
            fbutton:shadowColor="#D70033"

            />



        <!-- Restart -->
        <info.hoang8f.widget.FButton
            android:layout_marginTop="30dp"
            android:textSize="20sp"
            android:layout_below="@+id/dialog_btn_1"
            android:id="@+id/dialog_btn_2"

            android:layout_width="190dp"
            android:layout_height="40dp"
            android:layout_centerHorizontal="true"

            android:drawableLeft="@drawable/restart"
            android:drawableStart="@drawable/restart"
            android:drawablePadding="0dp"

            android:minWidth="250dp"

            android:paddingStart="15dp"
            android:paddingLeft="15dp"
            android:paddingEnd="10dp"
            android:paddingRight="10dp"
            android:paddingTop="-5dp"

            android:text="@string/restart"
            android:textColor="@android:color/white"

            fbutton:cornerRadius="5dp"
            fbutton:shadowEnabled="true"
            fbutton:shadowHeight="4dp"

            fbutton:buttonColor="#FF173E"
            fbutton:shadowColor="#D70033"

            />



        <!-- Home  -->
        <info.hoang8f.widget.FButton
            android:textSize="20sp"
            android:layout_below="@+id/dialog_btn_2"
            android:layout_marginTop="30dp"
            android:id="@+id/dialog_btn_3"

            android:layout_width="190dp"
            android:layout_height="40dp"
            android:layout_centerHorizontal="true"

            android:drawableLeft="@drawable/home"
            android:drawableStart="@drawable/home"
            android:drawablePadding="0dp"

            android:minWidth="250dp"
            android:paddingStart="15dp"
            android:paddingLeft="15dp"
            android:paddingEnd="10dp"
            android:paddingRight="10dp"
            android:paddingTop="-5dp"

            android:text="@string/home"
            android:textColor="@android:color/white"

            fbutton:cornerRadius="5dp"
            fbutton:shadowEnabled="true"
            fbutton:shadowHeight="4dp"

            fbutton:buttonColor="#FF173E"
            fbutton:shadowColor="#D70033"

            />



        <!-- Exit -->
        <info.hoang8f.widget.FButton
            android:textSize="20sp"
            android:layout_below="@+id/dialog_btn_3"
            android:layout_marginTop="30dp"
            android:id="@+id/dialog_btn_4"

            android:layout_width="190dp"
            android:layout_height="40dp"
            android:layout_centerHorizontal="true"

            android:drawableLeft="@drawable/quit"
            android:drawableStart="@drawable/quit"
            android:drawablePadding="0dp"

            android:minWidth="250dp"
            android:paddingStart="15dp"
            android:paddingLeft="15dp"
            android:paddingEnd="10dp"
            android:paddingRight="10dp"
            android:paddingTop="-5dp"

            android:text="@string/exit"
            android:textColor="@android:color/white"

            fbutton:cornerRadius="5dp"
            fbutton:shadowEnabled="true"
            fbutton:shadowHeight="4dp"

            fbutton:buttonColor="#FF173E"
            fbutton:shadowColor="#D70033"

            />



    </RelativeLayout>
</RelativeLayout>
