<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:fancy="http://schemas.android.com/apk/res-auto"
    xmlns:swipedeck="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.arjunsk.numbo.Fragments.GameFragment">


    <RelativeLayout
        android:orientation="vertical"
        android:background="@color/colorPrimary"
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <!--Score + Timer -->
        <RelativeLayout
            android:layout_marginTop="20dp"
            android:gravity="center_vertical"
            android:id="@+id/info_header"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true">


            <TextView
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:textSize="20sp"
                android:textAlignment="textEnd"
                android:gravity="end"
                android:layout_marginRight="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="20dp"
                android:layout_marginTop="10dp"
                android:id="@+id/tv_curr_score"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/score_0" />

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_alignParentTop="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true">


                <mehdi.sakout.fancybuttons.FancyButton
                    android:layout_marginStart="5dp"
                    android:layout_marginLeft="5dp"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    fancy:fb_radius="30dp"
                    android:id="@+id/btn_top_pause"
                    android:textSize="25sp"
                    fancy:fb_defaultColor="#FABA17"
                    fancy:fb_focusColor="#e3a300"
                    fancy:fb_fontIconResource="&#xf28c;"
                    fancy:fb_fontIconSize="25sp"
                    fancy:fb_text=""
                    fancy:fb_textColor="#000" />

                <TextView
                    android:textSize="20sp"
                    android:textAlignment="textEnd"
                    android:gravity="end"
                    android:layout_marginStart="5dp"
                    android:layout_marginLeft="5dp"
                    android:layout_marginBottom="20dp"
                    android:layout_marginTop="10dp"
                    android:id="@+id/tv_curr_time"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/_00" />

            </LinearLayout>

        </RelativeLayout>

        <!-- Contact Card -->
        <com.daprlabs.cardstack.SwipeFrameLayout
            android:layout_below="@+id/info_header"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:id="@+id/swipeLayout"
            android:layout_marginBottom="-30dp"
            android:orientation="vertical">

            <com.daprlabs.cardstack.SwipeDeck
                android:id="@+id/swipe_deck"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                swipedeck:max_visible="3"
                swipedeck:card_spacing="15dp" />

        </com.daprlabs.cardstack.SwipeFrameLayout>



        <!-- Edit Text-->
        <LinearLayout
            android:id="@+id/digits_container"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:orientation="horizontal"
            android:layout_below="@+id/swipeLayout"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true">


            <EditText

                android:paddingStart="10dp"
                android:paddingLeft="10dp"
                android:paddingEnd="10dp"
                android:paddingRight="10dp"

                android:inputType="phone"
                android:id="@+id/digits"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_vertical|end"
                android:background="@color/colorPrimary"
                android:maxLines="1"
                android:textSize="34sp"
                android:freezesText="true"
                android:focusableInTouchMode="false"
                android:cursorVisible="false"
                android:textCursorDrawable="@null"
                android:textStyle="normal"  />




            <mehdi.sakout.fancybuttons.FancyButton
                android:id="@+id/btn_backspace"
                android:layout_width="60dp"
                android:layout_height="match_parent"
                android:paddingEnd="10dp"
                android:paddingStart="10dp"
                android:textSize="30sp"

                fancy:fb_defaultColor="@color/colorPrimary"
                fancy:fb_focusColor="#e3a300"
                fancy:fb_iconPosition="left"
                fancy:fb_text="@string/delete"
                fancy:fb_textColor="#000" />


        </LinearLayout>


        <include layout="@layout/dialpad" />


    </RelativeLayout>


</FrameLayout>
